--- a/Treatment.html
+++ b/Treatment.html
@@ -19,7 +19,7 @@
           <a href = "#">HIV/AIDS</a>
           <a href = "#">TUBERCULOSIS</a>
           <a href = "#">MALARIA</a>
-          <a href = "#">HEPATITIS</a>
+          <a href = "#">HEPATITIS B</a>
           <a href = "#">TROPICLE DISEASE</a>
         </div>
       </div>
