--- a/Diseases.html
+++ b/Diseases.html
@@ -24,7 +24,7 @@
               <a href = "#">HIV/AIDS</a>
               <a href = "#">TUBERCULOSIS</a>
               <a href = "#">MALARIA</a>
-              <a href = "#">HEPATITIS</a>
+              <a href = "#">HEPATITIS B</a>
               <a href = "#">TROPICLE DISEASE</a>
             </div>
           </div>
