--- a/Prevention.html
+++ b/Prevention.html
@@ -27,9 +27,9 @@
       <div class="dropdown">
         <button class= "dropbtn" id = "nutritional" onclick="btnNutritional()">NUTRITIONAL</button>
         <div class="dropcontent">
-          <a href = "#">VEGETARIAN & VEGAN DIETS</a>
-          <a href = "#">HIGH-PROTEIN DIETS</a>
-          <a href = "#">FAT-FIGHTING DIETS</a>
+          <a href = "https://www.webmd.com/food-recipes/guide/vegetarian-and-vegan-diet" target="_blank">VEGETARIAN & VEGAN DIETS</a>
+          <a href = "https://www.webmd.com/diet/ss/slideshow-high-protein-diet" target="_blank">HIGH-PROTEIN DIETS</a>
+          <a href = "https://www.webmd.com/diet/ss/slideshow-fat-fighting-foods" target="_blank">FAT-FIGHTING DIETS</a>
         </div>
       </div>
       <div class="dropdown">
