--- a/Nutritional.html
+++ b/Nutritional.html
@@ -7,7 +7,7 @@
     <link href='https://fonts.googleapis.com/css?family=Noto Sans' rel='stylesheet'>
     <img id = "logo" src = "logo.png">
     <h2>Fight Communicable Diseases</h2>
-    <h5 id = "slogan">Fitter, healthier, happier</h5>
+    <h5 id = "slogan">Fitter, Healthier, Happier</h5>
     <link rel="stylesheet" href="Header.css">
     <link rel="stylesheet" href="Footer.css">
     <link rel="stylesheet" href="Nutritional.css">
@@ -26,7 +26,7 @@
               <a href = "Diseases.html#Tb">TUBERCULOSIS</a>
               <a href = "Diseases.html#malaria">MALARIA</a>
               <a href = "Diseases.html#HepaB">HEPATITIS B</a>
-              <a href = "Diseases.html#tropical">TROPICLE DISEASE</a>
+              <a href = "Diseases.html#tropical">TROPICAL DISEASE</a>
         </div>
       </div>
 
