--- a/Treatment.html
+++ b/Treatment.html
@@ -4,7 +4,7 @@
     <link href='https://fonts.googleapis.com/css?family=Noto Sans' rel='stylesheet'>
     <img id = "logo" src = "logo.png">
     <h2>Fight Communicable Diseases</h2>
-    <h5 id = "slogan">Fitter, healthier, happier</h5>
+    <h5 id = "slogan">Fitter, healthier, Happier</h5>
     <link rel="stylesheet" href="Header.css">
     <link rel="stylesheet" href="Treatment.css">
     <link rel="stylesheet" href="Footer.css">
@@ -20,7 +20,7 @@
           <a href = "Diseases.html#Tb">TUBERCULOSIS</a>
           <a href = "Diseases.html#malaria">MALARIA</a>
           <a href = "Diseases.html#HepaB">HEPATITIS B</a>
-          <a href = "Diseases.html#tropical">TROPICLE DISEASE</a>
+          <a href = "Diseases.html#tropical">TROPICAL DISEASE</a>
         </div>
       </div>
       <div class="dropdown">
