--- a/Treatment.html
+++ b/Treatment.html
@@ -4,7 +4,7 @@
     <link href='https://fonts.googleapis.com/css?family=Noto Sans' rel='stylesheet'>
     <img id = "logo" src = "logo.png">
     <h2>Fight Communicable Diseases</h2>
-    <h5 id = "slogan">Fitter, healthier, Happier</h5>
+    <h5 id = "slogan">Fitter, Healthier, Happier</h5>
     <link rel="stylesheet" href="Header.css">
     <link rel="stylesheet" href="Treatment.css">
     <link rel="stylesheet" href="Footer.css">
