--- a/ContactUs.html
+++ b/ContactUs.html
@@ -17,7 +17,7 @@
     <!--header start-->
     <img id = "logo" src = "logo.png">
     <h2>Fight Communicable Diseases</h2>
-    <h5 id = "slogan">Fitter, healthier, happier</h5>
+    <h5 id = "slogan">Fitter, Healthier, Happier</h5>
   <div class = "navbar">
        <a class ="links" id = "home" href="Home.html">HOME</a>
        <div class="dropdown">
