--- a/ContactUs.html
+++ b/ContactUs.html
@@ -27,7 +27,7 @@
                <a href = "Diseases.html#Tb">TUBERCULOSIS</a>
                <a href = "Diseases.html#malaria">MALARIA</a>
                <a href = "Diseases.html#HepaB">HEPATITIS B</a>
-               <a href = "Diseases.html#tropical">TROPICLE DISEASE</a>
+               <a href = "Diseases.html#tropical">TROPICAL DISEASE</a>
          </div>
        </div>
 
