--- a/Nutritional.html
+++ b/Nutritional.html
@@ -22,11 +22,11 @@
       <div class="dropdown">
         <button class= "dropbtn" id = "diseases" onclick="btnDiseases()">DISEASES</button>
         <div class= "dropcontent">
-          <a href = "#">HIV/AIDS</a>
-          <a href = "#">TUBERCULOSIS</a>
-          <a href = "#">MALARIA</a>
-          <a href = "#">HEPATITIS</a>
-          <a href = "#">TROPICLE DISEASE</a>
+          <a href = "Diseases.html#HIV/AIDS">HIV/AIDS</a>
+          <a href = "Diseases.html#Tb">TUBERCULOSIS</a>
+          <a href = "Diseases.html#malaria">MALARIA</a>
+          <a href = "Diseases.html#HepaB">HEPATITIS B</a>
+          <a href = "Diseases.html#tropical">TROPICAL DISEASE</a>
         </div>
       </div>
 
