--- a/Nutritional.html
+++ b/Nutritional.html
@@ -42,7 +42,7 @@
       <div class="dropdown">
         <button class= "dropbtn" id = "prevention" onclick="btnPrevention()">PREVENTION</button>
         <div class= "dropcontent">
-          <a href = "#">TREATMENT</a>
+          <a id="treatmentpage" href = "Treatment.html">TREATMENT</a>
         </div>
       </div>
       <a class ="links" id = "contactus" href="ContactUs.html">CONTACT US</a>
