--- a/Home.html
+++ b/Home.html
@@ -142,7 +142,8 @@
 		    	</div>
 		    	<div class="block-row">
 		    		<p>
-		    			Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente magni expedita culpa praesentium aliquam molestiae eos eligendi adipisci! Exercitationem, porro molestiae eaque nihil doloribus a quas corrupti deleniti debitis facere!
+		    			Wash your hands often. This is especially important before and after preparing food, before eating and after using the toilet.<br>
+					Get vaccinated. Immunization can drastically reduce your chances of contracting many diseases. Keep your recommended vaccinations up-to-date.
 		    		</p>
 		    	</div>
 		    </div>
@@ -154,7 +155,8 @@
 		    	</div>
 		    	<div class="block-row">
 		    		<p>
-		    			Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente magni expedita culpa praesentium aliquam molestiae eos eligendi adipisci! Exercitationem, porro molestiae eaque nihil doloribus a quas corrupti deleniti debitis facere!
+		    			Use antibiotics sensibly. Take antibiotics only when prescribed. Unless otherwise directed, or unless you are allergic to them, take all prescribed doses of your antibiotic, even if you begin to feel better before you have completed the medication.
+					<br> Be smart about food preparation. Keep counters and other kitchen surfaces clean when preparing meals. In addition, promptly refrigerate leftovers. Don't let cooked foods remain at room temperature for an extended period of time
 		    		</p>
 		    	</div>
 		    </div>
